# escapemap

./: .gitignore
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  database.py  firestore_db.py  main.py
backend/app/engines/: base.py  bitfobia.py  doorescape.py  keyescape.py  naver_booking.py
backend/app/models/: __init__.py  alert.py  cafe.py  schedule.py  (+2 more)
backend/data/: kakao_nationwide_20260301_1648.json  kakao_places_20260301_1621.json  kakao_places_20260301_1635.json  no_homepage_cafes.json  서울_방탈출카페_목록.xlsx  전국_방탈출카페_목록.xlsx
backend/docs/: xdungeon.md
backend/scripts/: add_missing_bitfobia.py  crawl_kakao_nationwide.py  crawl_kakao_places.py  crawl_xdungeon_test.py  export_excel.py  import_kakao_to_db.py  migrate_sqlite_to_firestore.py  sync_aliceescape_db.py  sync_clevertown_db.py  sync_codek_db.py  sync_conanescape_db.py  sync_cubeescape_db.py  sync_deepthinker_db.py  sync_doorescape_db.py  sync_dpsnnn_db.py  sync_dreampicnic_db.py  sync_dumbndumber_db.py  sync_escapecity_db.py  sync_escapedetective_db.py  sync_escapehouse_db.py  sync_escapers_db.py  sync_escapetop_db.py  sync_escbangtalul_db.py  sync_fantastrick_db.py  sync_frankantique_db.py  sync_geniusescape_db.py  sync_horrorswitch_db.py  sync_jigobyeol_db.py  sync_keyescape_db.py  sync_lastescape_db.py  sync_ledasquare_db.py  sync_mafiacafe_db.py  sync_masterkey_db.py  sync_movieescape_cokr_db.py  sync_movieescape_db.py  sync_murderparker_db.py  sync_mysteryroom_db.py  sync_nextedition_db.py  sync_no1escape_db.py  sync_oasisescape_db.py  (+35 more)
backend/tests/: test_engines.py
(+52 files in other folders)
